<resources>

    <string name="app_name">Learn1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="To">To</string>
    <string name="From">From</string>
    <string name="Message">Message</string>
    <string name="Send">Send</string>
    <string name="cancel">cancel</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="ck_sand">Sand</string>
    <string name="ck_rock">Rock</string>

    <string-array name="danhsach">
        <item>gia tri 1</item>
        <item>gia tri 2</item>
        <item>gia tri 3</item>
    </string-array>

    <string name="title_activity_nghia">NghiaActivity</string>
    <string name="title_activity_form2">form2</string>
    <string name="title_activity_active3">MainActivity</string>
    <string name="saokhonghieu">Sao khong hieu</string>
    <string name="title_activity_learn_uiform">LearnUIform</string>
    <string name="txtview1">Text View Info</string>
    <string name="title_activity_listactive">MainActivity</string>
    <string name="title_activity_intent1">MainActivity</string>
    <string name="title_activity_intent2">MainActivity</string>
    <string name="checkintent">Check Intent</string>

</resources>