<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/To" >

        <requestFocus android:layout_width="match_parent" />

    </TextView>
    <TextView
        android:id="@+id/from"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/From" >
    </TextView>
    <TextView
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:hint="@string/Message" >
    </TextView>
	<Button
	    android:id="@+id/openActivity"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/add">    
	</Button>
	<Button
	    android:id="@+id/saokhong"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/saokhonghieu"
	    />
	<Button
	    android:id="@+id/learnIntent"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/From">    
	</Button>
    <LinearLayout
        android:id = "@+id/ngang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
        
        <Button 
            android:id = "@+id/saoke"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"/>
        
        <Button
        android:id="@+id/button_send"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Send"
        android:onClick="clickEvent" >
    	</Button>
    	
        <Button
        android:id="@+id/button_cancel"
        android:layout_gravity="left"
        android:text="@string/cancel"
        android:layout_height="wrap_content"
        android:layout_width="100dp">
    	</Button>
    	
        <Button 
        android:id="@+id/btt1"
        android:layout_gravity="left"
        android:text="@string/button1"
        android:layout_height="wrap_content"
        android:layout_width="100dp">
    	</Button>
    
    	<Button 
        android:id="@+id/btt2"
        android:layout_gravity="left"
        android:text="@string/button2"
        android:layout_height="wrap_content"
        android:layout_width="100dp"/>
	
    	<Button 
        android:id="@+id/btt3"
        android:layout_gravity="left"
        android:text="@string/button3"
        android:layout_height="wrap_content"
        android:layout_width="100dp"/>
    
    	<Button 
        android:id="@+id/btt4"
        android:layout_gravity="left"
        android:text="@string/button4"
        android:layout_height="wrap_content"
        android:layout_width="100dp"/>
    
    
    </LinearLayout>

    <CheckBox
        android:id="@+id/ck1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ck_sand"
        android:onClick="onClickCheckBox"></CheckBox>
    
    <CheckBox
        android:id="@+id/ck2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ck_rock"
        android:onClick="onClickCheckBox"></CheckBox>
  	
       <ToggleButton
        android:id="@+id/tgl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="Nghia Off"
        android:textOn="Nghia On" />
 
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    
    <Button 
        android:id="@+id/btt10"
        android:layout_gravity="left"
        android:text="@string/button4"
        android:layout_height="wrap_content"
        android:layout_width="100dp"/>
        
    
</LinearLayout>