<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	   
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/hello_world"
        tools:context=".Form2" />

    <Button
        android:id="@+id/bttToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ck_rock"
        android:onClick="showInfo" />
    
    <Button
        android:id="@+id/bttImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:onClick="showInfo" />
	
    <Button
        android:id="@+id/bttDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send"
        android:onClick="showInfo" />
    
    <Button
        android:id="@+id/bttContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:onClick="showInfo" />
	</LinearLayout>
</RelativeLayout>
